# oracledb-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PUBLISHING.md  README.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
examples/: batch_insert.rs  connection_pool.rs  error_handling.rs  lob_handling.rs  prepared_statement.rs  simple_query.rs  transactions.rs
src/: auth.rs  connection.rs  error.rs  lib.rs  pool.rs  protocol.rs  result.rs  statement.rs  types.rs
