[package]
name = "oracledb-rs"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "Oracle Database driver for Rust - high performance async/sync connectivity"
license = "MIT OR Apache-2.0"
repository = "https://github.com/indyzai/oracledb-rs"
keywords = ["oracle", "database", "sql", "async", "driver"]
categories = ["database"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"], optional = true }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Networking
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec"] }

# Cryptography
sha2 = "0.10"
md5 = "0.7"
rand = "0.8"

# Logging
log = "0.4"
tracing = "0.1"

# Date/Time
chrono = "0.4"

# Encoding
encoding_rs = "0.8"

# Connection pooling
deadpool = { version = "0.10", optional = true }

# ODPI-C bindings (optional for thick mode)
libc = { version = "0.2", optional = true }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
criterion = "0.5"

[features]
default = ["async", "pool"]
async = ["tokio"]
pool = ["deadpool"]
thick = ["libc"]  # For Oracle Client library integration

[[example]]
name = "simple_query"
path = "examples/simple_query.rs"

[[example]]
name = "connection_pool"
path = "examples/connection_pool.rs"

[[bench]]
name = "query_benchmark"
harness = false
